<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SayHi</string>
    <string name="action_settings">Settings</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_near">附近</string>
    <string name="tab_setting">设置</string>
    <string name="tab_char">消息</string>
    <string name="tab_myself">我</string>
    <string name="back">返回</string>

    <string-array name="main_found_strs">
        <item >我的圈子</item>
        <item >附近</item>
        <item >觅Ta</item>
    </string-array>
</resources>
