<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/head_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_bar_height"
        android:layout_weight="1"
        android:background="@color/head_bar"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="15dp"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/head_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tab_char" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:paddingRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/tab_setting"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>